--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,14 @@
 Package: MultiTraits
 Type: Package
-Title: An R Package for Analyzing and Visualizing Multidimensional
-        Traits in Plants
+Title: Analyzing and Visualizing Multidimensional Plant Traits
 Version: 0.1.0
 Date: 2024-11-25
-Authors@R: c(
-    person("Yan", "He", email = "heyan@njfu.edu.cn", role = c("aut", "cre")))
+Authors@R: c(person("Yan", "He", email = "heyan@njfu.edu.cn", role = c("aut", "cre")))
 Maintainer: Yan He <heyan@njfu.edu.cn>
-Description: 
-    A comprehensive R package for analyzing and visualizing multidimensional plant traits. 
-    It implements multiple analytical methods including C-S-R (Competitors-Stress tolerators-Ruderals) 
-    strategy analysis using leaf area (LA), leaf dry matter content (LDMC), and specific leaf area 
-    (SLA), Leaf-Height-Seed (LHS) strategy analysis, Niche Periodicity Table (NPT) analysis, and 
-    Trait Network (TN) analysis. The package provides functions for data analysis, visualization, 
-    and network metrics calculation, offering tools for exploring plant ecological strategies and 
-    trait relationships.
-Imports: ggtern, igraph, Hmisc, corrplot, scatterplot3d, vegan, ggrepel
+Description: Implements analytical methods for multidimensional plant traits, including C-S-R (Competitors-Stress tolerators-Ruderals) strategy analysis using leaf traits, Leaf-Height-Seed strategy analysis, Niche Periodicity Table analysis, and Trait Network analysis. Provides functions for data analysis, visualization, and network metrics calculation. Methods are based on Grime (1974) <doi:10.1038/250026a0>, Pierce et al. (2017) <doi:10.1111/1365-2435.12882>, Westoby (1998) <doi:10.1023/A:1004327224729>, Yang et al. (2022) <doi:10.1016/j.foreco.2022.120540>, Winemiller et al. (2015) <doi:10.1111/ele.12462>, He et al. (2020) <doi:10.1016/j.tree.2020.06.003>.
+Imports: ggtern,igraph,Hmisc,corrplot,scatterplot3d,vegan,ggrepel
 Depends: R (>= 4.0.0), ggplot2
-Suggests: knitr, rmarkdown, testthat (>= 3.0.0), devtools
+Suggests: knitr,rmarkdown,testthat (>= 3.0.0),devtools
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -26,5 +17,5 @@ RoxygenNote: 7.3.2
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 NeedsCompilation: no
-Packaged: 2024-11-25 15:49:56 UTC; Administrator
+Packaged: 2024-11-26 13:44:54 UTC; Administrator
 Author: Yan He [aut, cre]
