--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,12 +19,20 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,margin)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,unit)
 importFrom(ggrepel,geom_text_repel)
 importFrom(ggtern,geom_mask)
 importFrom(ggtern,ggtern)
+importFrom(ggtern,limit_tern)
 importFrom(ggtern,theme_rgbw)
+importFrom(ggtern,theme_showarrows)
+importFrom(ggtern,theme_showgrid)
 importFrom(graphics,legend)
 importFrom(igraph,E)
 importFrom(igraph,V)
