--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,betweenness)
 importFrom(igraph,closeness)
+importFrom(igraph,cluster_edge_betweenness)
 importFrom(igraph,cluster_fast_greedy)
 importFrom(igraph,degree)
 importFrom(igraph,delete_vertices)
