--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,10 @@ export(NPT_continuous)
 export(NPT_continuous_plot)
 export(NPT_discrete)
 export(NPT_discrete_plot)
-export(TN)
-export(TN_corr)
-export(TN_metrics)
-export(TN_plot)
+export(PTN)
+export(PTN_corr)
+export(PTN_metrics)
+export(PTN_plot)
 export(phylo_correlation)
 import(ggplot2)
 importFrom(Hmisc,rcorr)
