--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CSR_hodgson)
 export(CSR_plot)
 export(LHS)
 export(LHS_plot)
+export(LHS_strategy_scheme)
 export(NPT_continuous)
 export(NPT_continuous_plot)
 export(NPT_discrete)
@@ -29,7 +30,6 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_point)
-importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
@@ -53,6 +53,10 @@ importFrom(ggtern,limit_tern)
 importFrom(ggtern,theme_rgbw)
 importFrom(ggtern,theme_showarrows)
 importFrom(ggtern,theme_showgrid)
+importFrom(graphics,layout)
+importFrom(graphics,legend)
+importFrom(graphics,par)
+importFrom(graphics,plot.new)
 importFrom(grid,arrow)
 importFrom(grid,unit)
 importFrom(igraph,E)
@@ -78,9 +82,11 @@ importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(rpart,prune)
 importFrom(rpart,rpart)
+importFrom(scatterplot3d,scatterplot3d)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
 importFrom(stats,kmeans)
+importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,p.adjust)
 importFrom(stats,predict)
