--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,22 +2,23 @@ Package: MultiTraits
 Type: Package
 Title: Analyzing and Visualizing Multidimensional Plant Traits
 Version: 0.6.0
-Date: 2025-9-24
+Date: 2025-10-1
 Authors@R: c(person("Yan", "He", email = "heyan@njfu.edu.cn", role = c("aut", "cre")),person("Zhaogang", "Liu", role = "aut"),person("Jiangshan", "Lai", role = "aut"),person("Lingfeng", "Mao", role = "aut"))
 Maintainer: Yan He <heyan@njfu.edu.cn>
 Description: Implements analytical methods for multidimensional plant traits, including Competitors-Stress tolerators-Ruderals strategy analysis using leaf traits, Leaf-Height-Seed strategy analysis, Niche Periodicity Table analysis, and Trait Network analysis. Provides functions for data analysis, visualization, and network metrics calculation. Methods are based on Grime (1974) <doi:10.1038/250026a0>, Pierce et al. (2017) <doi:10.1111/1365-2435.12882>, Westoby (1998) <doi:10.1023/A:1004327224729>, Winemiller et al. (2015) <doi:10.1111/ele.12462>, He et al. (2020) <doi:10.1016/j.tree.2020.06.003>.
 Imports:
         igraph,Hmisc,corrplot,vegan,ggrepel,ape,dplyr,ggraph,ggsci,rpart,magrittr,rlang,ggplot2,ggtern,scatterplot3d
 Depends: R (>= 4.0.0)
-Suggests: testthat (>= 3.0.0),devtools
+Suggests: knitr,rmarkdown,testthat (>= 3.0.0),devtools
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
+VignetteBuilder: knitr
 NeedsCompilation: no
-Packaged: 2025-09-30 07:53:57 UTC; Administrator
+Packaged: 2025-09-30 13:46:37 UTC; Administrator
 Author: Yan He [aut, cre],
   Zhaogang Liu [aut],
   Jiangshan Lai [aut],
