--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,9 +27,16 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,n)
 importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,arrow)
+importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_polygon)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
@@ -37,7 +44,10 @@ importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_size_identity)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_void)
 importFrom(ggplot2,unit)
+importFrom(ggplot2,xlim)
+importFrom(ggplot2,ylim)
 importFrom(ggraph,circle)
 importFrom(ggraph,create_layout)
 importFrom(ggraph,geom_edge_link)
@@ -47,12 +57,6 @@ importFrom(ggraph,ggraph)
 importFrom(ggraph,theme_graph)
 importFrom(ggrepel,geom_text_repel)
 importFrom(ggsci,pal_npg)
-importFrom(ggtern,geom_mask)
-importFrom(ggtern,ggtern)
-importFrom(ggtern,limit_tern)
-importFrom(ggtern,theme_rgbw)
-importFrom(ggtern,theme_showarrows)
-importFrom(ggtern,theme_showgrid)
 importFrom(graphics,layout)
 importFrom(graphics,legend)
 importFrom(graphics,par)
